--- a/src/components/MediaCounter/MediaCounter.module.scss
+++ b/src/components/MediaCounter/MediaCounter.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles";
+@import "../../assets/styles";
 
 .mediaCounter {
   @include flex($direction: row, $justify: space-between);
