--- a/src/components/Сomment/Сomment.module.scss
+++ b/src/components/Сomment/Сomment.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles";
+@import "../../assets/styles";
 
 .comment {
   @include flex($direction: row);
@@ -67,32 +67,6 @@
     @include size16-3;
     font-size: 16px;
   }
-}
-
-.likes {
-  @include flex($direction: row, $align: center);
-  gap: 8px;
-  color: $white;
-  @include size14-1;
-  cursor: pointer;
-
-  @media (min-width: 768px) {
-    @include size15-1;
-  }
-}
-
-.svg {
-  width: 20px;
-  height: 20px;
-
-  @media (min-width: 768px) {
-    width: 22px;
-    height: 22px;
-  }
-}
-
-.likesCount {
-  user-select: none;
 }
 
 .text {
