--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Lato;
+  font-family: Lato, Arial, sans-serif;
   background: rgba(12, 13, 15, 1);
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -13,5 +13,5 @@ code {
 
 @font-face {
   font-family: Lato;
-  src: url("fonts/Lato-Regular.ttf");
+  src: url("assets/fonts/Lato-Regular.ttf");
 }
